premier test du changement du matchmaking en salle d attente